--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,6 @@
     <string name="instructions_step2">Step 2. Click More in the resulting context menu.</string>
     <string name="instructions_step3">Step 3. Click Export chat.</string>
     <string name="instructions_step4">Step 4. Select without media.</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="instructions_step5">Step 5. Store the exported file to your device and then load it into this app.</string>
     <string name="load_previous_button_text">Load previous</string>
 </resources>
