--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="instructions_step4">Step 4. Select without media.</string>
     <string name="instructions_step5">Step 5. Store the exported file to your device and then load it into this app.</string>
     <string name="load_previous_button_text">Load previous</string>
+    <string name="breakdown_daily_header_text">DAILY</string>
+    <string name="breakdown_monthly_header_text">MONTHLY</string>
 </resources>
