Highlights Top days formatting

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="trends_daily_header_text">DAILY</string>
     <string name="trends_monthly_header_text">MONTHLY</string>
     <string name="loading_text">Generating insights. Please wait...</string>
+    <string name="records_top_days">TOP DAYS</string>
 </resources>
