--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="trends_monthly_header_text">MONTHLY</string>
     <string name="loading_text">Generating insights. Please wait...</string>
     <string name="records_top_days">TOP DAYS</string>
+    <string name="records_top_emojis">TOP EMOJIS</string>
 </resources>
